# create-setuply

./: .gitignore  .prettierrc  README.md  README.zh-CN.md  package.json  tsconfig.json
src/: index.ts  run.ts
templates/: vite.config.ts
templates/react/: index.html  package.json
templates/react/src/: App.css  App.tsx
templates/react/src/components/: Header.tsx
templates/react/src/hooks/: useInstallError.ts  useInstallProgress.ts
templates/react/src/utils/: index.ts
templates/src-tauri/: Cargo.toml  build.rs  tauri-dll-manifest.rc  tauri.conf.json
templates/src-tauri/capabilities/: default.json
templates/src-tauri/src/: lib.rs  main.rs
templates/vue/: index.html  package.json
templates/vue/src/: App.vue
templates/vue/src/hooks/: useInstallError.ts  useInstallProgress.ts
templates/vue/src/types/: index.d.ts
