[package]
name = "<%= name %>"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "<%= name %>_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
serde = "1.0.219"
futures-util = "0.3.31"
reqwest = {version = "0.12.22", features = ["stream"] }
tauri-plugin-dialog = "2"
zip = "4.2.0"
winreg = "0.55.0"
windows = { version = "0.62.2", features = ["Win32_System_Com", "Win32_UI_Shell", "Win32_Foundation"] }
dirs = "6.0.0"
